Finish static pages
In this commit, adding some slightly dynamic pages and also
using provite method and some changes in
static_pages_controller_test.rb.

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,9 +1,10 @@
 <!--this is about page -->
 
-<h1>
-  About
-</h1>
-
+<!-- <%  %> => call the provide function and associate the string
+     "About" with the label :title .
+-->
+<% provide(:title, "About") %>
+<h1>About</h1>
 <p>
   The <a href="https://www.railstutorial.org/"><em>Ruby on Rails
   Tutorial</em></a>, part of the
