--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,9 @@
 <!--This is home page  -->
 
+<!-- call the provide function and associate the string
+     "Home" with the label :title .
+-->
+<% provide(:title, "Home") %>
 <h1>Sample App</h1>
 <p>
   This is the home page for the
