--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,7 +1,11 @@
 <!--This is simple help page  -->
 
-<h1>Help</h1>
+<!-- call the provide function and associate the string
+     "Help" with the label :title .
+-->
 
+<% provide(:title, "Help") %>
+<h1>Help</h1>
 <p>
   Get help on the Ruby on Rails Tutorial at the
   <a href="https://www.railstutorial.org/help">Rails Tutorial Help page</a>.
