--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -100,7 +100,16 @@ aside {
 .gravatar_edit {
   margin-top: 15px;
 }
-
+/* Users index */
+.users {
+  list-style: none;
+  margin: 0;
+  li {
+    overflow: auto;
+    padding: 10px 0;
+    border-bottom: 1px solid $gray-lighter;
+  }
+}
 /* forms */
   input, textarea, select, .uneditable-input {
   border: 1px solid #bbb;
